--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,278 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body{
+  background-image: url("https://pixy.org/src/255/thumbs350/2551741.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow:auto;
+  width: 100%;
+  height: 100%;
+  line-height: 1.4rem;
+  font-size: 0.8rem;
+  padding : 5px 5px 5px 5px;
+  
   }
-}
+  
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  /**************header******************/
+  .header
+  {
+    overflow: hidden;
+    margin:0em;
+    border: 5px;
+    height: 150px;
+    color:yellow;
+    font-family:"Times New Roman", Times, serif;
+    font-size: 30px;
+    width:100%;
+    text-align: center;
+    padding: 50px;
+    border-radius: 10px;
+    background-color: rgb(56, 151, 196);
+    line-height: 25px;
+    float: center;
+   
   }
-  to {
-    transform: rotate(360deg);
+  
+  /**************grid**************/
+  .game{
+    display:grid;
+    grid-template-columns: 0.25fr 0.55fr 0.15fr 0.23fr ;
+
+    
   }
+  .game > div:nth-child(2){
+    background-color: rgb(56, 151, 196) ;
+    border-radius:20px;
+    border: 5px solid black;
+    margin: 4px 0;    
+   }
+   .game > div:nth-child(2)> button{
+  cursor: pointer;
+  color:gold;
+	position: relative;
+	padding: 1.5rem 0rem;
+	border-radius: 20px;
+	line-height: 2.5rem;
+  font-weight: bold;
+	font-size: 50px;
+  width: 100px;
+  border: 1px solid linear-gradient(-180deg, #89acff 0%, #c8c1c7 100%);
+	background-color: black;
+	box-shadow:	0 -0.25rem 1.5rem rgb(126, 110, 133) inset,
+							0 0.75rem 0.5rem rgba(255,255,255, 0.4) inset,
+							0 0.25rem 0.5rem 0 rgb(153, 122, 122) inset;
+  margin: 4px 4px;
 }
+
+   .game > div:nth-child(2)> button:hover{
+    color: white;
+   }
+  .action{
+    border-color: honeydew;
+    background-color: gold;
+    color: black;
+    font-weight: bold;
+    padding: 5px 5px;
+    font-size: 30px;
+    width: 150px;
+    border-radius: 20px;
+  	line-height: 2.5rem;
+    display:inline-block;
+    text-align: center;
+    margin: 10px 10px;
+    cursor: pointer;
+    box-shadow:	0 -0.25rem 1.5rem rgb(126, 110, 133) inset,
+    0 0.75rem 0.5rem rgba(255,255,255, 0.4) inset,
+    0 0.25rem 0.5rem 0 rgb(153, 122, 122) inset;
+  }
+  .action:hover
+  {
+    color:whitesmoke;
+  }
+  .num{
+    font-size: 18px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight:bold;
+  }
+  
+   .game > div:nth-child(4){
+    border-radius:20px;
+    font-family:sans-serif;
+    border-color:rgb(56, 151, 196) 20px ;
+    box-shadow:	0 -0.25rem 1.5rem rgb(126, 110, 133) inset,
+							0 0.75rem 0.5rem rgba(255,255,255, 0.4) inset,
+							0 0.25rem 0.5rem 0 rgb(153, 122, 122) inset;
+    }
+  
+  .money{
+    cursor:pointer;
+    display:inline-block;
+    padding:8px;
+    width:90px;
+    background-color: rgb(17, 81, 134);
+    color:white;
+    font-weight: bold;
+    border: 3px solid honeydew;
+    text-decoration: blanchedalmond;
+    font-size: 50px;
+    font-family:'Times New Roman', Times, serif;
+    border-radius:70%;
+    width: 100px;
+    box-shadow:	0 -0.25rem 1.5rem rgb(126, 110, 133) inset,
+							0 0.75rem 0.5rem rgba(255,255,255, 0.4) inset,
+							0 0.25rem 0.5rem 0 rgb(153, 122, 122) inset;
+    margin: 10px 10px;
+  }
+ .money:hover
+ {
+   color:gold;
+ }
+  #img{
+   width:70%;
+   border-radius: 40px;
+   justify-items: center;
+   }
+
+  #selection{
+    border: 5px solid rgb(56, 151, 196);
+    border-radius:5%;
+  }
+  #total{
+  bottom: 0;
+  left: 0;
+  text-decoration: bold; 
+  font-size:20px;
+  font-weight:bold;
+  }
+  .grid{
+   display:grid;
+   grid-template-rows:1fr 1.25fr 1fr;
+  }
+ 
+  .calculation{
+  background-color:rgb(56, 151, 196) ;
+  text-align: left;
+  width:100%;
+  color:yellow;
+  font-size: 30px;
+  font-family:"Times New Roman", Times, serif;
+  border-radius:  5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  }
+  
+ #row
+  {
+  display:grid;
+  grid-template-rows:1fr 1fr;
+ }
+  .hide
+ {
+  display:none;
+ }
+/**************modal******************/
+#cal
+{
+display:grid;
+grid-template-columns:1.35fr 0.75fr;
+justify-items:left;
+padding-left: 20px;
+}
+.part1
+{
+width:65%;
+justify-items: left;
+}
+.part2{
+width:50%;
+justify-items: right;
+font-size: 100px;
+border-color: honeydew;
+color: black;
+margin: 4px 2px;
+cursor: pointer;
+}
+#btn
+{
+background-color: white;
+border: none;
+color:black;
+font-weight: bold;
+padding: 5px 5px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 15px;
+border-radius: 85px;
+cursor: pointer;
+background-color: gold;
+margin: 10px 10px;
+box-shadow:	0 -0.25rem 1.5rem rgb(126, 110, 133) inset,
+    				0 0.75rem 0.5rem rgba(255,255,255, 0.4) inset,
+		  			0 0.25rem 0.5rem 0 rgb(153, 122, 122) inset;
+font-size: 25px;
+width: 100px;
+}
+#btn1
+{
+border-radius: 3px;
+cursor: pointer;
+font-size: 16px;
+display: inline-block;
+padding-left: 7px 3px;
+margin: 0.5px 0.5px;
+text-align: center;
+font-size: 30px;
+width: 30px;
+box-shadow:	0 -0.25rem 1.5rem rgb(204, 197, 207) inset,
+							0 0.75rem 0.5rem rgba(211, 198, 198, 0.4) inset,
+							0 0.25rem 0.5rem 0 rgb(245, 234, 234) inset;
+}
+
+.modal
+{ 
+position:absolute;
+top:0;
+left:0;
+height:100vh;
+width:100%;
+z-index:1;
+background-color: rgba(180, 178, 190, 0.7);
+display: grid;
+align-items: center;
+}
+
+.modal-container
+{
+width: 600px;
+color: white;
+margin: 0 auto;
+background-color: rgb(56, 151, 196) ;
+padding-bottom: 20px;
+text-align: center;
+align-items: center;
+}
+
+@media (max-width: 575.98px) { 
+  
+ }
+
+@media (min-width: 576px) and (max-width: 767.98px) { 
+  
+ }
+
+@media (min-width: 768px) and (max-width: 991.98px) { 
+  
+ }
+
+@media (min-width: 992px) and (max-width: 1199.98px) { 
+  .calculation{
+    width: 80%;  }
+ }
+
+  
